--- a/app/src/main/res/layout/fragment_schedule_select_client.xml
+++ b/app/src/main/res/layout/fragment_schedule_select_client.xml
@@ -229,26 +229,26 @@
     </LinearLayout>
 
 
-    <RelativeLayout
-        android:id="@+id/bottom_layout"
-        android:layout_alignParentBottom="true"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <!--<RelativeLayout-->
+        <!--android:id="@+id/bottom_layout"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content">-->
 
-        <TextView
-            android:id="@+id/txt_continue"
-            android:layout_width="fill_parent"
-            android:layout_height="45dp"
-            android:layout_alignParentBottom="true"
-            android:background="@color/button_bg"
-            android:gravity="center_vertical|center_horizontal"
-            android:text="CONTINUE"
-            android:textColor="@color/white"
-            android:textSize="18dp"
-            android:textStyle="bold" />
+        <!--<TextView-->
+            <!--android:id="@+id/txt_continue"-->
+            <!--android:layout_width="fill_parent"-->
+            <!--android:layout_height="45dp"-->
+            <!--android:layout_alignParentBottom="true"-->
+            <!--android:background="@color/button_bg"-->
+            <!--android:gravity="center_vertical|center_horizontal"-->
+            <!--android:text="CONTINUE"-->
+            <!--android:textColor="@color/white"-->
+            <!--android:textSize="18dp"-->
+            <!--android:textStyle="bold" />-->
 
 
-    </RelativeLayout>
+    <!--</RelativeLayout>-->
 
 
 </RelativeLayout>
