--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,6 +42,7 @@
                     android:src="@mipmap/default_avatar" />
 
                 <LinearLayout
+                    android:id="@+id/tab_activity_schedule"
                     android:layout_width="fill_parent"
                     android:layout_height="30dp"
                     android:layout_centerVertical="true"
