--- a/app/src/main/res/layout/fragment_schedule_choose_date.xml
+++ b/app/src/main/res/layout/fragment_schedule_choose_date.xml
@@ -53,12 +53,22 @@
             android:layout_marginLeft="15dp"
             android:orientation="vertical">
 
-            <CalendarView
-                android:id="@+id/calendar_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/white"/>
-
+            <!--<com.imanoweb.calendarview.CustomCalendarView-->
+                <!--android:id="@+id/calendar_view"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:background="@color/off_white"-->
+                <!--app:calendarBackgroundColor="@color/off_white"-->
+                <!--app:calendarTitleTextColor="@color/black"-->
+                <!--app:currentDayOfMonthColor="@color/blue"-->
+                <!--app:dayOfMonthTextColor="@color/black"-->
+                <!--app:dayOfWeekTextColor="@color/black"-->
+                <!--app:disabledDayBackgroundColor="@color/off_white"-->
+                <!--app:disabledDayTextColor="@color/grey"-->
+                <!--app:selectedDayBackgroundColor="@color/blue"-->
+                <!--app:titleLayoutBackgroundColor="@color/white"-->
+                <!--app:weekLayoutBackgroundColor="@color/white">-->
+            <!--</com.imanoweb.calendarview.CustomCalendarView>-->
 
             <TextView
                 android:layout_width="wrap_content"
