--- a/app/src/main/res/layout/fragment_schedule_timeline.xml
+++ b/app/src/main/res/layout/fragment_schedule_timeline.xml
@@ -4,60 +4,6 @@
     android:layout_height="match_parent"
     android:background="@color/white">
 
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="50dp"
-        android:background="@color/button_bg">
-
-        <ImageView
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:id="@+id/img_search"
-            android:src="@mipmap/search"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="15dp" />
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:id="@+id/img_user_picture"
-            android:layout_marginRight="15dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:src="@mipmap/default_avatar" />
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="30dp"
-            android:layout_toRightOf="@+id/img_search"
-            android:layout_toLeftOf="@+id/img_user_picture"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:background="@mipmap/base_schedule"
-            android:layout_centerVertical="true">
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:text="Schedules"
-                android:id="@+id/txt_schedules"
-                android:layout_weight="1"
-                android:gravity="center_vertical|center_horizontal"
-                android:textSize="15dp"
-                android:textColor="@color/white" />
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:text="Activities"
-                android:id="@+id/txt_activities"
-                android:layout_weight="1"
-                android:gravity="center_vertical|center_horizontal"
-                android:textSize="15dp" />
-        </LinearLayout>
-    </RelativeLayout>
-
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
@@ -89,8 +35,9 @@
                     android:textSize="12sp"
                     android:textStyle="bold" />
                 <View
+                    android:visibility="gone"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:layout_height="2dp"
                     android:background="@color/button_bg" />
 
             </LinearLayout>
@@ -107,12 +54,13 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:text="TODAY"
-                    android:textColor="@color/button_bg"
+                    android:textColor="@color/semi_transparent_black"
                     android:layout_marginBottom="10dp"
                     android:textSize="12sp"
                     android:textStyle="bold" />
 
                 <View
+                    android:visibility="gone"
                     android:layout_width="match_parent"
                     android:layout_height="2dp"
                     android:background="@color/button_bg" />
@@ -135,8 +83,9 @@
                     android:textSize="12sp"
                     android:textStyle="bold" />
                 <View
+                    android:visibility="gone"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:layout_height="2dp"
                     android:background="@color/button_bg" />
             </LinearLayout>
 
@@ -157,12 +106,19 @@
                     android:textSize="12sp"
                     android:textStyle="bold" />
                 <View
+                    android:visibility="gone"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:layout_height="2dp"
                     android:background="@color/button_bg" />
             </LinearLayout>
 
 
         </LinearLayout>
     </LinearLayout>
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
+        android:layout_below="@+id/tab_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
