--- a/app/src/main/res/layout/schedule_list.xml
+++ b/app/src/main/res/layout/schedule_list.xml
@@ -5,8 +5,6 @@
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/listView"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="1" />
+        android:layout_height="match_parent"
+        android:id="@+id/list" />
 </LinearLayout>
