--- a/app/src/main/res/layout/fragment_schedule_view.xml
+++ b/app/src/main/res/layout/fragment_schedule_view.xml
@@ -13,7 +13,7 @@
         android:layout_height="54dp">
 
         <TextView
-            android:id="@+id/txt_signup_label"
+            android:id="@+id/schedule_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="5dp"
@@ -165,7 +165,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:id="@+id/message"
+                            android:id="@+id/title"
                             android:gravity="center_vertical"
                             android:text="Meet with the new management to deliver the new special as available"
                             android:textStyle="bold"
@@ -193,6 +193,7 @@
                 android:paddingTop="10dp">
 
                 <TextView
+                    android:id="@+id/description"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textColor="@color/schedule_title_bg_color"
