--- a/app/src/main/res/layout/schedule_dialog.xml
+++ b/app/src/main/res/layout/schedule_dialog.xml
@@ -26,7 +26,7 @@
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_centerVertical="true"
-                    android:src="@mipmap/avatar_profile" />
+                    android:src="@mipmap/default_avatar" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -57,7 +57,7 @@
                         android:textSize="13sp" />
 
                     <TextView
-                        android:id="@+id/info"
+                        android:id="@+id/distance"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center_vertical"
@@ -96,6 +96,7 @@
                     android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/phone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
