--- a/app/src/main/res/layout/schedule_map_info_window.xml
+++ b/app/src/main/res/layout/schedule_map_info_window.xml
@@ -14,7 +14,7 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:scaleType="fitXY"
-            android:src="@mipmap/client_photo" />
+            android:src="@mipmap/default_avatar" />
     </LinearLayout>
 
     <LinearLayout
