--- a/app/src/main/res/layout/schedule_select_client_list_item.xml
+++ b/app/src/main/res/layout/schedule_select_client_list_item.xml
@@ -19,7 +19,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_centerVertical="true"
-            android:src="@mipmap/avatar_profile" />
+            android:src="@mipmap/default_avatar" />
 
         <LinearLayout
             android:layout_width="match_parent"
