--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#363640</color>
-    <color name="colorPrimaryDark">#2B2B33</color>
+    <color name="colorPrimaryDark">#3c96ff</color>
     <color name="colorAccent">#FF4081</color>
     <color name="white">#ffffff</color>
     <color name="white2">#f5f5f5</color>
@@ -21,6 +21,6 @@
     <color name="off_white">#FAFAFA</color>
     <color name="background2">#E0E0E0</color>
     <color name="indigo">#3F51B5</color>
-    <color name="blue">#03A7E9</color>
+    <color name="blue">#ffffff</color>
     <color name="grey">#757575</color>
 </resources>
