fragment_line_push

--- a/app/src/main/res/layout/dialog_change_password.xml
+++ b/app/src/main/res/layout/dialog_change_password.xml
@@ -150,7 +150,7 @@
             android:layout_marginRight="7dp"
             android:text="CANCEL"
             android:textStyle="bold"
-            android:textColor="@color/alert_bg_color"
+            android:textColor="@color/schedule_title_bg_color"
             android:textSize="18sp" />
 
         <TextView
@@ -162,7 +162,7 @@
             android:background="@drawable/bottom_curve_white_background"
             android:text="YES DONE"
             android:textStyle="bold"
-            android:textColor="@color/button_bg"
+            android:textColor="@color/color_green"
             android:textSize="18sp" />
 
 
