--- a/app/src/main/res/layout/activity_line.xml
+++ b/app/src/main/res/layout/activity_line.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
@@ -18,7 +18,6 @@
             android:layout_height="54dp">
 
             <TextView
-                android:id="@+id/txt_signup_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
@@ -57,13 +56,12 @@
         </RelativeLayout>
 
         <RelativeLayout
-            android:id="@+id/name_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/top_layout"
             android:paddingBottom="5dp"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp">
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp">
 
             <EditText
                 android:id="@+id/name"
@@ -81,34 +79,42 @@
             <LinearLayout
                 android:id="@+id/tab_bar"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="wrap_content"
                 android:layout_below="@+id/name"
+                android:gravity="bottom"
                 android:orientation="horizontal"
-                android:paddingBottom="5dp">
+                android:paddingTop="10dp">
 
                 <LinearLayout
-                    android:layout_width="fill_parent"
+                    android:id="@+id/general_tab"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="0.2"
-                    android:gravity="bottom"
                     android:orientation="vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="left"
                         android:text="GENERAL"
-                        android:textColor="@color/white"
+                        android:layout_gravity="center_horizontal"
+                        android:textColor="@color/white2"
                         android:textSize="14sp"
+                        android:paddingBottom="3dp"
                         android:textStyle="bold" />
+
+                    <TextView
+                        android:visibility="gone"
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:background="@color/white" />
 
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="fill_parent"
+                    android:id="@+id/revenue_tab"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="0.2"
-                    android:gravity="bottom"
                     android:orientation="vertical">
 
                     <TextView
@@ -116,16 +122,23 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:text="REVENUE"
-                        android:textColor="@color/white"
+                        android:textColor="@color/white2"
+                        android:paddingBottom="3dp"
                         android:textSize="14sp"
                         android:textStyle="bold" />
+
+                    <TextView
+                        android:visibility="gone"
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:background="@color/white" />
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="fill_parent"
+                    android:id="@+id/goal_tab"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="0.2"
-                    android:gravity="bottom"
                     android:orientation="vertical">
 
                     <TextView
@@ -133,16 +146,24 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:text="GOAL"
-                        android:textColor="@color/white"
+                        android:textColor="@color/white2"
+                        android:paddingBottom="3dp"
                         android:textSize="14sp"
                         android:textStyle="bold" />
+
+                    <TextView
+                        android:visibility="gone"
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:background="@color/white" />
+
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="fill_parent"
+                    android:id="@+id/client_tab"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="0.2"
-                    android:gravity="bottom"
                     android:orientation="vertical">
 
                     <TextView
@@ -150,9 +171,16 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:text="CLIENT"
-                        android:textColor="@color/white"
+                        android:textColor="@color/white2"
+                        android:paddingBottom="3dp"
                         android:textSize="14sp"
                         android:textStyle="bold" />
+
+                    <TextView
+                        android:visibility="gone"
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:background="@color/white" />
                 </LinearLayout>
 
 
@@ -163,11 +191,11 @@
 
     </LinearLayout>
 
-    <ListView
-        android:id="@+id/list"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
+        android:layout_below="@+id/top"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:listSelector="@android:color/transparent"
-        android:scrollbars="none" />
+        android:layout_height="wrap_content" />
 
-</LinearLayout>
+
+</RelativeLayout>
