--- a/app/src/main/res/layout/fragment_create_client.xml
+++ b/app/src/main/res/layout/fragment_create_client.xml
@@ -118,7 +118,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/top"
-        android:paddingBottom="0dp">
+        android:paddingBottom="30dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -725,6 +725,7 @@
 
 
                     <LinearLayout
+                        android:id="@+id/visit_radio"
                         android:orientation="horizontal"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
@@ -740,8 +741,8 @@
                             <ImageView
                                 android:layout_width="20dp"
                                 android:layout_height="20dp"
-                                android:src="@mipmap/circle_check2"
-                                android:id="@+id/wimg_weekly" />
+                                android:src="@mipmap/circle_uncheck"
+                                android:id="@+id/img_weekly" />
 
                             <TextView
                                 android:layout_width="wrap_content"
